# rust-wasm-plugins-examples

./: Cargo.toml  README.md  run.sh
assets/wit/: acme-plugins.wit
crates/host/: Cargo.toml
crates/host/src/: host.rs  main.rs  prettify.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: bindings.rs  lib.rs  quote_prettify.rs
host/: Cargo.toml
host/src/: bindings.rs  host.rs  main.rs  prettify.rs
plugin/: Cargo.toml
plugin/src/: bindings.rs  host.rs  lib.rs  quote_prettify.rs
