[package]
edition = "2021"

name = "host"
description = "Rust Wasm Plugins Example"
version = "0.0.1"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-wasm-plugins-example"
documentation = "https://github.com/tliron/rust-wasm-plugins-example"
authors = ["Tal Liron"]

readme = "../README.md"

categories = ["wasm"]                                      # https://crates.io/category_slugs
keywords = ["wasm", "wasi", "wit", "wasmtime", "examples"]

[dependencies]
anyhow = "1.0.99"
wasmtime = "36.0.2"
wasmtime-wasi = "36.0.2"
